// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Customer: Represents customers of the test app.
Order: Represents orders placed by customers.
OrderItem: Represents items in each order.
Product: Represents products available for sale.
ProductSupplier: Link table representing product suppliers.
Supplier: Represents suppliers of products.
'''
}

Table Customer {
    id INTEGER [primary key]
    name VARCHAR 
    email VARCHAR 
    balance FLOAT 
    credit_limit FLOAT 
    }

Table Order {
    id INTEGER [primary key]
    customer_id INTEGER 
    order_date DATETIME 
    amount_total FLOAT 
    }

Table OrderItem {
    id INTEGER [primary key]
    order_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    amount FLOAT 
    }

Table Product {
    id INTEGER [primary key]
    name VARCHAR 
    price FLOAT 
    description TEXT 
    }

Table ProductSupplier {
    id INTEGER [primary key]
    product_id INTEGER 
    supplier_id INTEGER 
    }

Table Supplier {
    id INTEGER [primary key]
    name VARCHAR 
    contact_info VARCHAR 
    }



// Relationships
    Ref: Order.(customer_id) < Customer.(id)
    Ref: OrderItem.(order_id) < Order.(id)
    Ref: OrderItem.(product_id) < Product.(id)
    Ref: ProductSupplier.(product_id) < Product.(id)
    Ref: ProductSupplier.(supplier_id) < Supplier.(id)
